# finance-bro

./: .dockerignore  .env.example  .gitignore  .renderignore  CHANGELOG.md  CLAUDE.md  Dockerfile  PANDASAI_V3_MIGRATION.md  README.md  app.py  app_beta.py  build-and-push.sh  cleanup_cache.py  compaction.md  deployment-plan.md  docker-compose.yml  phase_2.md  pyproject.toml  rag_plan.md  redis.md  render.yaml  requirements.txt  setup.sh  summary.md  test.ipynb  test2.ipynb
.github/workflows/: docker-publish.yml  docker-test-build.yml
.streamlit/: config.toml  secrets.example.toml
.windsurf/rules/: feedback.md  project.md  versioning.md
Reference/: Valuation.py  auth-spec.md  company_profile.py  config.md  process.py  screener.md  screener.py  stock_portfolio_optimization.py  stock_price_analysis.py
docs/: pyportopt_doc.md
docs/architecture/: 01-system-context.md  02-architecture-overview.md  03-container-architecture.md  04-component-architecture.md  05-data-architecture.md  06-security-architecture.md  07-quality-attributes.md  08-architecture-decisions.md  09-technology-choices.md  README.md
pages/: Company_Overview.py  Financial_Health_Report.py  Fund_Analysis.py  Portfolio_Optimization.py  Screener.py  Stock_Price_Analysis.py  Technical_Analysis.py  Valuation.py  bro.py  company_profile.py  company_profile_streamlit.py  dupont_analysis.py  stock_portfolio_optimization_streamlit.py  stock_price_streamlit.py
prd/: prd2.txt  simplified_prd.txt
scripts/: build-and-push.sh  build-deploy.sh  deploy-to-render.sh  validate_vnstock_data.py
src/components/: auth_components.py  date_picker.py  stock_selector.py  ui_components.py
src/core/: config.py
src/financial_health_crew/: crew.py  main.py
src/financial_health_crew/config/: agents.yaml  tasks.yaml
src/financial_health_crew/tools/: financial_analysis_tool.py
src/services/: auth.py  auth_service.py  chart.py  chart_service.py  crewai.py  crewai_service.py  crewai_streaming.py  data.py  data_service.py  fibonacci.py  fibonacci_service.py  financial_analysis_service.py  financial_data.py  financial_data_service.py  quantstats_metrics.py  session_state.py  session_state_service.py  technical_indicators.py  vnstock_api.py
src/utils/: session_utils.py  validation.py
standalone-bro/: README.md  pyproject.toml  standalone_bro.py  test_standalone.py
static/: style.css
tests/: conftest.py  demo_fix.py  test_crewai_streaming.py  test_current_price_fix.py  test_effective_tax_rate.py  test_financial_formatting.py  test_portfolio_optimization.py  test_valuation_analysis.py  test_vnstock_api_functions.py
